--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,6 @@ spring.data.mongodb.database=mongo12345
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rahulchaudhary7543@gmail.com
-spring.mail.password=Luck@8823@
+spring.mail.password=Rocket@8823@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
