--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -118,4 +118,4 @@ status.label.addedtonote = Label successfully added to the note
 status.label.removedfromnote = Label successfully removed from note
 
 #Key
-0207=Tasif
+0207=Rahul
