--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,14 +16,14 @@ server.port=8085
 spring.application.name=fundooNote
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=mongo12345
+spring.data.mongodb.database=fundooDB
 #spring.data.mongodb.repositories.enabled=true
 #-----------------------------------------------------------------------------------
 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rahulchaudhary7543@gmail.com
-spring.mail.password=Rocket@8823@
+spring.mail.username=fundoonote101@gmail.com
+spring.mail.password=Moto@8823@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
