node label completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ spring.mail.username=fundoonote101@gmail.com
 spring.mail.password=Moto@8823@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#----------------------------------------------------------------------------------------
+#Access key ID->  AKIA346ALUZKDP3WJMWW
+#Secret access key-> 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
+#----------------------------------------------------------------------------------------
+ 
