--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -117,5 +117,14 @@ status.label.addedtonote = Label successfully added to the note
 #Label removed from note
 status.label.removedfromnote = Label successfully removed from note
 
+#Profile Created successfully
+aws.propic.successfull=Profile created successfully
+
+#Profile Created successfully
+aws.propic.delete.successfull=Profile deleted successfully
+
+#Profile failuer to create successfully
+aws.propic.failuer=Profile pic failuer to work
+
 #Key
 0207=Rahul
