--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Access key ID->  AKIA346ALUZKDP3WJMWW
 #Secret access key-> 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
 #----------------------------------------------------------------------------------------
+amazonProperties.endpointUrl=https://818057815636.signin.aws.amazon.com/console
+amazonProperties.accessKey=AKIA346ALUZKD3ZSDD6Z
+amazonProperties.secretKey=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
+amazonProperties.bucketName=propics3bucket
+
+
+
+
  
