some changes done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #-----------------------------------------------------------------------------------
 
-logging.file=/home/admin1/Documents/fundooNote/info.log
+#logging.file=/home/admin1/Documents/fundooNote/info.log
 server.port=8085
 
 #-------------------MongoDB Database--------------------------------------------------
@@ -32,11 +32,11 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Access key ID->  AKIA346ALUZKDP3WJMWW
 #Secret access key-> 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
 #----------------------------------------------------------------------------------------
+
 amazonProperties.endpointUrl=https://818057815636.signin.aws.amazon.com/console
 amazonProperties.accessKey=AKIA346ALUZKD3ZSDD6Z
 amazonProperties.secretKey=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
 amazonProperties.bucketName=propics3bucket
-
 
 
 
