some changes done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
 
-#-------------------MySql Database--------------------------------------------------
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/fundoo
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#-----------------------------------------------------------------------------------
+ 
 
-#logging.file=/home/admin1/Documents/fundooNote/info.log
+logging.file=/home/admin1/Documents/fundooNote/InfoData/info.log
 server.port=8085
 
 #-------------------MongoDB Database--------------------------------------------------
