--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -114,6 +114,9 @@ status.label.updated = Label updated successfully
 #Label added to note
 status.label.addedtonote = Label successfully added to the note
 
+#Label added to note
+status.label.note.added = Label not added
+
 #Label removed from note
 status.label.removedfromnote = Label successfully removed from note
 
