--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -129,5 +129,7 @@ aws.propic.delete.successfull=Profile deleted successfully
 #Profile failuer to create successfully
 aws.propic.failuer=Profile pic failuer to work
 
+jwtTokenExceptionMessage = Invalid Token
+
 #Key
 0207=Rahul
