some more changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,17 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #----------------------------------------------------------------------------------------
-#Access key ID->  AKIA346ALUZKDP3WJMWW
-#Secret access key-> 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
+ 
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=password
+fundoo.rabbitmq.exchange=fundoo.exchange
+fundoo.rabbitmq.queue=fundoo.queue
+fundoo.rabbitmq.routingkey=fundoo
+org.springframework.beans.factory.annotation.Autowired=true
+spring.main.allow-bean-definition-overriding=true
+
+ 
 #----------------------------------------------------------------------------------------
 
 amazonProperties.endpointUrl=https://818057815636.signin.aws.amazon.com/console
