--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
-
+# ============================== #
+# 		     Logger    		     #
+# ============================== #
 
 logging.file=/home/admin1/Documents/fundooNote/InfoData/info.log
 server.port=8085
 
-#-------------------MongoDB Database----------------------------------------------------
+# ============================== #
+# 		      MongoDB    		 #
+# ============================== #
+
 spring.application.name=fundooNote
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=fundooDB
 #spring.data.mongodb.repositories.enabled=true
-#---------------------------------------------------------------------------------------
 
+# ============================== #
+# 		       Mail    		     #
+# ============================== #
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -19,7 +26,9 @@ spring.mail.password=Moto@8823@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#----------------------------------------------------------------------------------------
+# ============================== #
+# 		     RabbitMq   	     #
+# ============================== #
  
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
@@ -27,11 +36,17 @@ spring.rabbitmq.password=password
 fundoo.rabbitmq.exchange=fundoo.exchange
 fundoo.rabbitmq.queue=fundoo.queue
 fundoo.rabbitmq.routingkey=fundoo
+
+
+elastic.rabbitmq.exchange=fundooelastic.exchange
+elastic.rabbitmq.queue=fundooelastic.queue1
+elastic.rabbitmq.routingkey=fundooelastic.routingkey
 org.springframework.beans.factory.annotation.Autowired=true
 spring.main.allow-bean-definition-overriding=true
 
- 
-#----------------------------------------------------------------------------------------
+# ============================== #
+# 	   S3 Bucket(Profile Pic)    #
+# ============================== #
 
 amazonProperties.endpointUrl=https://818057815636.signin.aws.amazon.com/console
 amazonProperties.accessKey=AKIA346ALUZKD3ZSDD6Z
