some more changes done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,10 +48,10 @@ spring.main.allow-bean-definition-overriding=true
 # 	   S3 Bucket(Profile Pic)    #
 # ============================== #
 
-amazonProperties.endpointUrl=https://818057815636.signin.aws.amazon.com/console
-amazonProperties.accessKey=AKIA346ALUZKD3ZSDD6Z
-amazonProperties.secretKey=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
-amazonProperties.bucketName=propics3bucket
+amazonProperties.endpointUrl=###
+amazonProperties.accessKey=###
+amazonProperties.secretKey=###
+amazonProperties.bucketName=###
 
 
 
